# ask-server

./: CMakeLists.txt  README.md  appo.c  ask.conf  ask.h  ask.ini  askd.c  authentication.c  base64.c  base64.h  build.sh  config.c  httpAuthClient.c  httpAuthClient.h  http_auth_client.c  ini.c  log.c  protocol.c  protocol.h  session.c  session.h  uthash.h  version.h  version.h.in
certs/: server.csr  server.key  server.key.org
cmake/: FindLibCURL.cmake  FindLibConfig.cmake  FindLibGcrypt.cmake  FindMicroHttpd.cmake  FindOpenSSL.cmake  FindUUID.cmake  FindUUID_old.cmake
